resources/experiment/0814-specgen/081403/log-SafeLanding_Mutant4-2025_08_16_15_47_56.txt
public class SafeLanding_Mutant4 {
    /*@ public normal_behavior
      @   ensures \result == (height <= 5 && speed <= 3 && tilt <= 10);
      @*/
    public static boolean safeLanding(int height, int speed, int tilt) {
        boolean safe = true;
        
        //@ maintaining safe == (height <= 5 && speed <= 3 && tilt <= 10);
        if (height > 5) {
            safe = false;
        }
        
        //@ maintaining safe == (height <= 5 && speed <= 3 && tilt <= 10);
        if (speed > 3) {
            safe = false;
        }
        
        //@ maintaining safe == (height <= 5 && speed <= 3 && tilt <= 10);
        if (tilt > 10) {
            safe = false;
        }
        
        return safe;
    }
}
==============================
/root/specgen/SpecGen/project/081403-specgen/tmp/SafeLanding_Mutant4.java:8: error: Loop specifications must immediately precede a loop statement
        //@ maintaining safe == (height <= 5 && speed <= 3 && tilt <= 10);
            ^
/root/specgen/SpecGen/project/081403-specgen/tmp/SafeLanding_Mutant4.java:13: error: Loop specifications must immediately precede a loop statement
        //@ maintaining safe == (height <= 5 && speed <= 3 && tilt <= 10);
            ^
/root/specgen/SpecGen/project/081403-specgen/tmp/SafeLanding_Mutant4.java:18: error: Loop specifications must immediately precede a loop statement
        //@ maintaining safe == (height <= 5 && speed <= 3 && tilt <= 10);
            ^
3 errors

==============================
public class SafeLanding_Mutant4 {
    /*@ public normal_behavior
      @   ensures \result == (height <= 5 && speed <= 3 && tilt <= 10);
      @*/
    public static boolean safeLanding(int height, int speed, int tilt) {
        boolean safe = true;
        
        if (height > 5) {
            safe = false;
        }
        
        if (speed > 3) {
            safe = false;
        }
        
        if (tilt > 10) {
            safe = false;
        }
        
        return safe;
    }
}
==============================

==============================
